# DiffeRT

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rustfmt.toml  CHANGELOG.md  CITATION.cff  CNAME  Cargo.toml  LICENSE.md  MANIFEST.in  README.md  REPORT.md  ROADMAP.md  benchmark.py  justfile  make_plot.sh  ok.py  pyproject.toml  sionna.json  test.py
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature_request.yml
.github/actions/: build-pgo-wheel  build-pgo-wheel.yml
.github/workflows/: clearcache.yml  coverage.yml  labeler.yml  languagetool.yml  lint.yml  pages.yml  publish.yml  publish_differt.yml  publish_differt_core.yml  rustmsrv.yml  spelling.yml  test.yml
benches/: main.rs
benches/benchmarks/: graph_iterators.rs
differt/: README.md  pyproject.toml
differt-core/: Cargo.toml  README.md  build.rs  differt_core.pyi  pyproject.toml
differt-core/.github/workflows/: CI.yml
differt-core/benches/: bench_main.rs
differt-core/benches/benchmarks/: graph_iterators.rs  mod.rs
differt-core/include/: ffi.h
differt-core/python/differt_core/: __init__.py
differt-core/python/differt_core/_differt_core/: __init__.pyi
differt-core/python/differt_core/_differt_core/accel/: bvh.pyi
differt-core/python/differt_core/_differt_core/geometry/: mesh.pyi  sionna.pyi  triangle_mesh.pyi
differt-core/python/differt_core/_differt_core/rt/: graph.pyi
differt-core/python/differt_core/_differt_core/scene/: scene.pyi  sionna.pyi
differt-core/python/differt_core/_lowlevel/geometry/: triangle_mesh.pyi
differt-core/python/differt_core/_lowlevel/rt/: graph.pyi  utils.pyi
differt-core/python/differt_core/_lowlevel/scene/: sionna.pyi  triangle_scene.pyi
differt-core/python/differt_core/accel/: __init__.py  _bvh.py  bvh.py
differt-core/python/differt_core/geometry/: __init__.py  _graph.py  _mesh.py  _scene.py  _sionna.py  _triangle_mesh.py  triangle_mesh.py
differt-core/python/differt_core/rt/: __init__.py  _graph.py  graph.py  utils.py
differt-core/python/differt_core/scene/: __init__.py  _scene.py  _sionna.py  _triangle_scene.py  sionna.py  triangle_scene.py
differt-core/src/: ffi.cc  lib.rs
differt-core/src/accel/: bvh.rs  ffi.rs  mod.rs
differt-core/src/geometry/: graph.rs  mesh.rs  mod.rs  scene.rs  sionna.rs  triangle_mesh.rs
differt-core/src/rt/: graph.rs  mod.rs  utils.rs
differt-core/src/scene/: mod.rs  sionna.rs  triangle_scene.rs
differt-core/tests/: test_version.py
differt-core/tests/benchmarks/: conftest.py  test_graph.py
differt-core/tests/geometry/: test_core_mesh.py  test_core_scene.py  test_graph.py
differt-core/tests/rt/: test_graph.py
differt-core/tests/scene/: test_scene.py
differt/geometry/: __init__.py  triangle_mesh.py  utils.py
differt/plotting/: decorators.py
differt/rt/: image_method.py  utils.py
differt/scene/: scene.py
differt/src/differt/: __init__.py  _utils.py  _version.py  conftest.py  logic.py  utils.py  version.py
differt/src/differt/accel/: __init__.py  _accelerated.py  _bvh.py  _ffi.py
differt/src/differt/accel/bvh/: __init__.py  _accelerated.py  _ffi.py  _triangle_bvh.py
differt/src/differt/em/: __init__.py  _antenna.py  _cir.py  _constants.py  _fresnel.py  _interaction_type.py  _material.py  _pipeline.py  _special.py  _utd.py  _utils.py  antenna.py  constants.py  fresnel.py  special.py  utd.py  utils.py
differt/src/differt/geometry/: __init__.py  _fermat.py  _hashing.py  _image_method.py  _interception.py  _mesh.py  _paths.py  _rt_utils.py  _scene.py  _sionna.py  _solver_fermat.py  _solvers.py  _triangle_mesh.py  _triangle_scene.py  _utils.py  paths.py  triangle_mesh.py  utils.py
differt/src/differt/plotting/: __init__.py  _core.py  _utils.py
differt/src/differt/plugins/: __init__.py  _deepmimo_types.py  deepmimo.py
differt/src/differt/rt/: __init__.py  _fermat.py  _image_method.py  _utils.py  fermat.py  image_method.py  utils.py
differt/src/differt/scene/: __init__.py  _scene.py  _sionna.py  _solvers.py  _triangle_scene.py  sionna.py  triangle_scene.py
differt/tests/: conftest.py  test_differt_core.py  test_integration.py  test_utils.py  utils.py
differt/tests/accel/: test_bvh.py
differt/tests/benchmarks/: conftest.py  fixtures.py  test_rt.py  test_training.py
differt/tests/em/: test_antenna.py  test_constants.py  test_fresnel.py  test_interaction_type.py  test_material.py  test_pipeline.py  test_special.py  test_utd.py  test_utils.py
differt/tests/geometry/: conftest.py  cube.ply  fixtures.py  test_fermat.py  test_image_method.py  test_mesh.py  test_paths.py  test_rt_utils.py  test_scene.py  test_sionna.py  test_solvers.py  test_triangle_mesh.py  test_triangle_mesh_diffraction.py  test_triangle_scene.py  test_utils.py  two_buildings_with_mat.mtl  utils.py
differt/tests/plotting/: _types.py  conftest.py  params.py  test_core.py  test_import.py  test_utils.py
differt/tests/plugins/: test_deepmimo.py
differt/tests/rt/: conftest.py  fixtures.py  test_fermat.py  test_image_method.py  test_utils.py  utils.py
differt/tests/scene/: conftest.py  fixtures.py  test_scene.py  test_sionna.py  test_solvers.py  test_triangle_scene.py
docs/: Makefile  conf.py  index.rst  justfile
docs/source/: api_reference.rst  batch_axes.md  changelog.md  citing.md  citing.rst  conf.py  contributing.md  conventions.md  guides.rst  index.rst  installation.md  limitations.md  motivations.md  nans_and_infs.md  numpy_vs_jax.md  path_tracing_vs_launching.md  reference.rst  references.bib  references.rst  tpus.md  tutorials.rst
examples/: README.md  ruff.toml  train.py  train_path_sampler.py
examples/sampling_paths/: __init__.py  agent.py  conftest.py  generators.py  metrics.py  model.py  replay_buffer.py  submodels.py  test_agent.py  test_metrics.py  test_model.py  test_replay_buffer.py  test_submodels.py  test_utils.py  utils.py
scripts/: nbsetup.py  sync_sampling_paths_tutorial.py
src/: lib.rs
tests/: conftest.py  test_conftest.py  test_differt_core.py  test_utils.py  utils.py
(+134 files in other folders)
