[dependencies]
nalgebra = "0.32.3"
ndarray = {version = "0.15", features = ["rayon"]}
numpy = "0.20"
obj-rs = "0.7.1"
pyo3 = "0.20"

[dev-dependencies]
pyo3 = {version = "0.20.0", features = ["auto-initialize"]}
rstest = "0.18.2"

[features]
extension-module = ["pyo3/extension-module"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "differt"

[package]
edition = "2021"
include = [
  "/pyproject.toml",
  "/README.md",
  "/LICENSE",
  "/src",
  "/python/differt",
  "!python/differt/conftest.py",
  "!__pycache__",
  "!*.so",
  "!.*",
]
name = "_core"
version = "0.0.6"

[profile.bench]
debug = true
strip = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
