[[bench]]
harness = false
name = "bench_main"

[dependencies]
nalgebra = "0.32.3"
ndarray = {version = "0.15", features = ["rayon"]}
numpy = "0.20"
obj-rs = "0.7.1"
pyo3 = "0.20"

[dev-dependencies]
criterion = "0.5.1"
pyo3 = {version = "0.20.0", features = ["auto-initialize"]}
rstest = "0.18.2"

[features]
extension-module = ["pyo3/extension-module"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
name = "differt"

[package]
edition = "2021"
name = "_core"
rust-version = "1.75.0"
version = "0.0.10"

[profile.bench]
debug = true
strip = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
