[project]
authors = [{name = "Jérome Eertmans", email = "jeertmans@icloud.com"}]
name = "differt-dev"
requires-python = ">=3.9"
version = "1.0.0"

[tool.bumpversion]
allow_dirty = false
commit = true
commit_args = ""
current_version = "0.0.10"
ignore_missing_version = false
message = "chore(deps): bump version from {current_version} to {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}"]
sign_tags = false
tag = false
tag_message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "differt-core/Cargo.toml"
replace = "version = {new_version}"
search = "^version = {current_version}"

[[tool.bumpversion.files]]
filename = "differt/pyproject.toml"
replace = "differt-core=={new_version}"
search = "differt-core=={current_version}"

[tool.codespell]
builtin = "clear,rare,informal,usage,names,en-GB_to_en-US"
check-hidden = true
ignore-words-list = "crate,ue"
skip = "docs/source/conf.py,pyproject.toml"

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'raise NotImplementedError',
  'if TYPE_CHECKING:',
  'if typing.TYPE_CHECKING:',
]
precision = 2

[tool.coverage.run]
omit = ["**/*/conftest.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ["differt/src/differt", "tests"]
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
]
doctest_optionflags = ["NORMALIZE_WHITESPACE"]
env = [
  "JAX_DEBUG_NANS=True",
  "JAX_PLATFORM_NAME=cpu",
]
filterwarnings = [
  "error",
  'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning',  # Python 3.12
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-ignore = [
  "D203",  # no-blank-line-before-class
  "D212",  # multi-line-summary-second-line
  "D407",  # Missing dashed underline after section
  "F722",  # Syntax error in forward annotation
]
extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
isort = {known-first-party = ["differt", "differt_core", "tests"]}

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["equinox.field"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["T"]

[tool.ruff.lint.per-file-ignores]
"**.ipynb" = ["B018"]
"**/{docs,differt_dev,tests}/*" = ["D"]
"differt/src/differt/conftest.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.rye]
dev-dependencies = [
  "differt[all]",
  # dev
  "bump-my-version>=0.20.3",
  "pre-commit>=3.5.0",
  # docs
  "myst-nb>=0.17.2",
  "pillow>=10.1.0",
  "sphinx>=6",
  "sphinx-autodoc-typehints>=1.23",
  "sphinx-book-theme>=1.0.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinx-remove-toctrees>=0.0.3",
  "sphinxext-opengraph>=0.9.0",
  "sphinxcontrib-apidoc>=0.4.0",
  "sphinxcontrib-bibtex>=2.6.0",
  "sphinx-plotly-directive>=0.1.3",
  # tests
  "chex>=0.1.84",
  "pytest>=7.4.3",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=4.1.0",
  "pytest-env>=1.1.3",
  "pytest-xdist>=3.3.1",
  "scipy>=1.12.0",
]
managed = true

[tool.rye.workspace]
members = ["differt", "differt-core"]
