[[bench]]
harness = false
name = "bench_main"

[dependencies]
log = "0.4.21"
nalgebra = "0.32.3"
ndarray = {version = "0.15", features = ["rayon"]}
numpy = "0.21"
obj-rs = "0.7.1"
ply-rs = "0.1.3"
pyo3 = "0.21"
pyo3-log = "0.10"
quick-xml = {version = "0.31.0", features = ["serialize"]}
serde = {version = "1.0.197", features = ["derive"]}

[dev-dependencies]
criterion = "0.5.1"
pyo3 = {version = "0.21", features = ["auto-initialize"]}
rstest = "0.18.2"

[features]
extension-module = ["pyo3/extension-module"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
name = "differt_core"

[package]
edition = "2021"
name = "differt-core"
rust-version = "1.75.0"
version = "0.0.16"
