[[bench]]
harness = false
name = "bench_main"

[dependencies]
indexmap = {version = "2.5.0", features = ["serde"]}
log = "0.4.21"
nalgebra = "0.32.3"
ndarray = {version = "0.16", features = ["rayon"]}
numpy = "0.24"
obj-rs = "0.7.1"
ply-rs = "0.1.3"
pyo3 = {version = "0.24", features = ["abi3-py310", "indexmap", "generate-import-lib"]}
pyo3-log = "0.12.2"
quick-xml = {version = "0.37.2", features = ["serialize", "serde-types"]}
serde = {version = "1.0.197", features = ["derive"]}

[dev-dependencies]
criterion = "0.5.1"
pyo3 = {version = "0.24", features = ["auto-initialize"]}
rstest = "0.18.2"
testing_logger = "0.1.1"

[features]
extension-module = ["pyo3/extension-module"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
name = "differt_core"

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(tarpaulin_include)']}

[package]
edition = "2021"
name = "differt-core"
rust-version = "1.78.0"
version = "0.0.34"
