[[bench]]
harness = false
name = "bench_main"

[build-dependencies]
cxx-build = {version = ">=1.0,<1.0.178", optional = true}
pyo3-build-config = {version = "0.25", optional = true}

[dependencies]
cxx = {version = ">=1.0,<1.0.178", optional = true}
indexmap = {version = "2.5.0", features = ["serde"]}
log = "0.4"
nalgebra = "0.32.3"
ndarray = {version = "0.16", features = ["rayon"]}
numpy = "0.25"
obj-rs = "0.7.1"
ply-rs = "0.1.3"
pyo3 = {version = "0.25", features = ["abi3-py311", "indexmap", "generate-import-lib"]}
pyo3-log = "0.12.4"
quick-xml = {version = "0.37.2", features = ["serialize", "serde-types"]}
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
criterion = "0.5.1"
pyo3 = {version = "0.25", features = ["auto-initialize"]}
rstest = "0.18.2"
testing_logger = "0.1.1"

[features]
extension-module = ["pyo3/extension-module"]
xla-ffi = ["dep:cxx", "dep:cxx-build", "dep:pyo3-build-config"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
name = "differt_core"

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(tarpaulin_include)']}

[package]
edition = "2021"
name = "differt-core"
rust-version = "1.78.0"
version = "0.8.0"
