[build-system]
build-backend = "maturin"
requires = ["maturin>=1.6,<2"]

[project]
authors = [
  {name = "Jérome Eertmans", email = "jeertmans@icloud.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.20"]
description = "Core backend of DiffeRT implemented in Rust"
dynamic = ["license", "readme", "version"]
keywords = ["ray tracing", "differentiable", "propagation", "radio", "jax"]
name = "differt-core"
requires-python = ">= 3.10"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
include = [
  {path = "src/**/*", format = "sdist"},
  {path = "LICENSE.md", format = "sdist"},
  {path = "README.md", format = "sdist"},
]
module-name = "differt_core._differt_core"
python-source = "python"
strip = true
