[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
authors = [{name = "Jérome Eertmans", email = "jeertmans@icloud.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "beartype>=0.17.2",
  "differt-core==0.0.16",
  "equinox>=0.11.2",
  "jax>=0.4.20",
  "jaxtyping>=0.2.24",
  "numpy>=1.26.1",
  "optax>=0.1.7",
  "typing-extensions>=4.9.0;python_version < '3.11'",
  "requests>=2.31.0",
  "tqdm>=4.66.2",
]
description = "Differentiable Ray Tracing Toolbox for Radio Propagation Simulations"
dynamic = ["readme", "version"]
keywords = ["ray tracing", "differentiable", "propagation", "radio", "jax"]
license = "MIT"
name = "DiffeRT"
requires-python = ">=3.9"

[project.optional-dependencies]
all = [
  "differt[jupyter,matplotlib,plotly,vispy,vispy-backend]",
]
jupyter = ["notebook>5", "jupyter-rfb>=0.4.2", "ipympl"]
matplotlib = ["matplotlib>=3.8.1"]
plotly = ["plotly>=5.18.0"]
vispy = ["vispy>=0.14.1"]
vispy-backend = ["PyQt6>=6.6.1"]

[project.urls]
Changelog = "https://github.com/jeertmans/DiffeRT/releases"
Documentation = "https://eertmans.be/DiffeRT"
Founding = "https://github.com/sponsors/jeertmans"
Homepage = "https://github.com/jeertmans/DiffeRT"
Repository = "https://github.com/jeertmans/DiffeRT"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",  # Hidden files
  "conftest.py",
  "tests",
]

[tool.hatch.build.targets.wheel]
exclude = [
  "conftest.py",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '> \[!([A-Z]+)\]'
replacement = '> **\1:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(./([^)]+)\)'
replacement = '(https://github.com/jeertmans/DiffeRT/blob/main/\1)'

[tool.hatch.version]
path = "../differt-core/Cargo.toml"
pattern = '^version = "(?P<version>[^"]+)'

[tool.rye]
managed = true
