[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
authors = [{name = "Jérome Eertmans", email = "jeertmans@icloud.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "chex>=0.1.86",
  "differt-core==0.0.34",
  "equinox>=0.11.5",
  "filelock>=3.15.4",
  "jax>=0.4.32",
  "jaxtyping>=0.2.24",
  "numpy>=1.26.1",
  "optax>=0.1.7",
  "typing-extensions>=4.9.0;python_version<'3.11'",
  "requests>=2.32.0",
  "tqdm>=4.66.2",
]
description = "Differentiable Ray Tracing Toolbox for Radio Propagation Simulations"
dynamic = ["readme", "version"]
keywords = ["ray tracing", "differentiable", "propagation", "radio", "jax"]
license = "MIT"
name = "DiffeRT"
requires-python = ">=3.10"

[project.optional-dependencies]
all = [
  "differt[jupyter,matplotlib,plotly,vispy,vispy-backend]",
]
jupyter = ["notebook>5", "jupyter-rfb>=0.4.2", "ipympl>=0.9.4"]
matplotlib = ["matplotlib>=3.8.1"]
plotly = ["plotly>=5.18.0"]
vispy = [
  "vispy>=0.14.1",
  # PyOpenGL seems to be needed, see:
  # https://github.com/vispy/vispy/issues/2547
  # https://github.com/vispy/vispy/pull/2549
  # https://github.com/bitcraze/crazyflie-clients-python/pull/708
  "PyOpenGL>=3.1.0;platform_system=='Darwin'",
]
vispy-backend = ["PyQt6>=6.6.1"]

[project.scripts]
"download-sionna-scenes" = "differt.scene._sionna:main"

[project.urls]
Changelog = "https://github.com/jeertmans/DiffeRT/releases"
Documentation = "https://eertmans.be/DiffeRT"
Founding = "https://github.com/sponsors/jeertmans"
Homepage = "https://github.com/jeertmans/DiffeRT"
Repository = "https://github.com/jeertmans/DiffeRT"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",  # Hidden files
  "conftest.py",
  "tests",
]

[tool.hatch.build.targets.sdist.force-include]
"../LICENSE.md" = "LICENSE.md"
"../README.md" = "README.md"

[tool.hatch.build.targets.wheel]
exclude = [
  "conftest.py",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '> \[!([A-Z]+)\]'
replacement = '> **\1:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(./([^)]+)\)'
replacement = '(https://github.com/jeertmans/DiffeRT/blob/main/\1)'

[tool.hatch.version]
path = "../differt-core/Cargo.toml"
pattern = '^version = "(?P<version>[^"]+)'

[tool.uv.sources]
differt_core = {workspace = true}
