[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
authors = [{name = "Jérome Eertmans", email = "jeertmans@icloud.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "chex>=0.1.86",
  "differt-core==0.6.2",
  "equinox>=0.13.1",
  "filelock>=3.15.4",
  "fpt-jax==0.1.0",
  "jax>=0.8.1",
  "jaxtyping>=0.3.6",
  "numpy>=1.26.1",
  "requests>=2.32.0",
  "tqdm>=4.66.2",
]
description = "Differentiable Ray Tracing Toolbox for Radio Propagation Simulations"
dynamic = ["readme", "version"]
keywords = ["ray tracing", "differentiable", "propagation", "radio", "jax"]
license = "MIT"
name = "DiffeRT"
requires-python = ">=3.11"

[project.optional-dependencies]
all = [
  "differt[jupyter,matplotlib,plotly,vispy,vispy-backend]",
]
jupyter = ["notebook>5", "jupyter-rfb>=0.4.2", "ipympl>=0.9.4", "ipykernel<7"]
matplotlib = ["matplotlib>=3.8.1"]
plotly = ["plotly>=5.18.0"]
vispy = [
  "vispy>=0.14.1",
]
vispy-backend = ["PyQt6>=6.6.1"]

[project.scripts]
"download-sionna-scenes" = "differt.scene._sionna:main"

[project.urls]
Changelog = "https://github.com/jeertmans/DiffeRT/releases"
Documentation = "https://eertmans.be/DiffeRT"
Founding = "https://github.com/sponsors/jeertmans"
Homepage = "https://github.com/jeertmans/DiffeRT"
Repository = "https://github.com/jeertmans/DiffeRT"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",  # Hidden files
  "conftest.py",
  "tests",
]

[tool.hatch.build.targets.sdist.force-include]
"../LICENSE.md" = "LICENSE.md"
"../README.md" = "README.md"

[tool.hatch.build.targets.wheel]
exclude = [
  "conftest.py",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '> \[!([A-Z]+)\]'
replacement = '> **\1:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\(./([^)]+)\)'
replacement = '(https://github.com/jeertmans/DiffeRT/blob/main/\1)'

[tool.hatch.version]
path = "../differt-core/Cargo.toml"
pattern = '^version = "(?P<version>[^"]+)'

[tool.uv.sources]
differt_core = {workspace = true}
